fixup! make background blur work on safari
Why. Why are they like this.

--- a/css/main.css
+++ b/css/main.css
@@ -315,6 +315,7 @@ body {
     /*background-color: #31425f;*/
     background-color: rgba(49, 66, 95, 0.6);
     backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px);
     color: white;
     border-radius: 4px;
     top: 50px;
@@ -387,6 +388,7 @@ body {
     text-align: left;
     background-color: rgba(22, 30, 44, 0.8);
     backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px);
     padding: 20px;
     width: 500px;
     position: absolute;
@@ -407,6 +409,7 @@ body {
     border: 6px solid transparent;
     border-bottom-color: rgba(22, 30, 44, 0.8);
     backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px);
     right: 20px;
     top: -12px;
 }
